gcc/testsuite/gcc.dg/cpp/trad/comment.c
/* Test for warning of unterminated comment.  */

/* { dg-do preprocess } */

/* { dg-error "-:unterminated comment" }
